--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ Font
 ----------*/
 @font-face {
   font-family: "Inter";
-  src: url("../assets/font/Inter-Medium.ttf");
+  src: url("../assets/font/Inter-Bold.ttf");
 }
 
 /*--------
@@ -14,7 +14,6 @@ html {
   color: black;
   background-color: #FDFDFD;
   overflow-x: hidden;
-  font-weight: 500;
   font-optical-sizing: auto;
   text-rendering: optimizeLegibility;
   font-variant-ligatures: common-ligatures;
@@ -24,8 +23,8 @@ html {
   hyphens: auto;
   -webkit-hyphenate-character: '-';
   letter-spacing: -0.04rem;
-  margin-left: 2%;
-  margin-right: 2%;
+  margin-left: 3%;
+  margin-right: 3%;
 }
 
 ::selection {
@@ -57,9 +56,8 @@ body {
 Header
 ----------*/
 nav {
-  width: 96%;
+  width: 100%;
   height: 7vh;
-  position: fixed;
   z-index: 100 !important;
   border-bottom: 1px solid black;
   font-size: calc(12px + (35 - 20) * ((100vw - 576px) / (2560 - 576)));
@@ -89,6 +87,19 @@ nav {
   content: "😳🕶️🤏"
 }
 
+.font-btn {
+  grid-column: 2;
+  text-align: center;
+}
+
+.font-btn:hover span {
+  display: none
+}
+
+.font-btn:hover:before {
+  content: "😎"
+}
+
 .about-btn {
   grid-column: 3;
   text-align: right;
@@ -97,13 +108,14 @@ nav {
 
 
 /*--------
-Index
+Content
 ----------*/
-.introduction {
-  min-height: 100vh;
+.content {
+  height: calc(83vh - 1px);
   width: 100%;
   place-items: center;
-  position: sticky;
   top: 0;
-  background-color: #000000;
+  background-color: red;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
 }
