--- a/css/style.css
+++ b/css/style.css
@@ -221,12 +221,15 @@ Prev and Next buttons
   min-height: 100%;
   top: 0% !important;
   margin-top: 0 !important;
-  content: "" !important;
+  font-size: 32px;
+  margin: 32px;
+  background-color: transparent !important;
+  user-select: none;
 }
 
 .swiper-button-prev{
   left: 0 !important;
-  cursor: w-resize !important;
+  cursor: w-resize !important;  
   justify-content: start !important;
   align-items: center !important;
 }
@@ -234,16 +237,14 @@ Prev and Next buttons
 .swiper-button-next{
   justify-content: end;
   right: 0 !important;
-  cursor: e-resize !important;
+  cursor: e-resize !important;  
   justify-content: end !important;
   align-items: center !important;
 }
 
-/*--------------------
-Temporary Swiper style
---------------------*/
-
-
+/*----------
+Swiper style
+----------*/
 
 .swiper-wrapper{
   align-items: flex-end;
@@ -257,46 +258,31 @@ Temporary Swiper style
   justify-content: center;
 }
 
-.swiper-button-next:after{
-  content: "→" !important;
-  color: var(--color1);
-  text-shadow:
-   -1px -1px 0 var(--color2),
-    1px -1px 0 var(--color2),
-    -1px 1px 0 var(--color2),
-     1px 1px 0 var(--color2);
-  margin: 0 32px 32px 0;
+.swiper-button-next:after, .swiper-button-prev:after{
+  content: "" !important;
 }
 
-.swiper-button-prev:after{
-  content: "←" !important;
-  color: var(--color1);
-  text-shadow:
-   -1px -1px 0 var(--color2),
-    1px -1px 0 var(--color2),
-    -1px 1px 0 var(--color2),
-     1px 1px 0 var(--color2);
-  margin: 0 0 32px 32px;
+/*----------------------------------
+BW, random, switch, download buttons
+----------------------------------*/
+
+.inv{
+  color: var(--color2) !important;
+  background-color: var(--color1);
+  transition: 0.4s;
+}
+
+.right{
+  color: var(--color1) !important;
+  background-color: var(--color2);
+  transition: 0.4s;
 }
 
 .buttons{
   position: absolute;
   z-index: 10000;
-  bottom: calc(5vh + 32px);
-  left: calc(3% + 32px);
-}
-
-.inv{
-  color: var(--color2) !important;
-  background-color: var(--color1) !important;
-}
-
-.right{
-  color: var(--color1);
-  background-color: var(--color2);
-}
-
-.buttons{
+  bottom: 32px;
+  left: 32px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   width: 120px;
@@ -305,12 +291,17 @@ Temporary Swiper style
 }
 
 .buttons > div{
+  font-size: 28px;
+  line-height: 28px;
+  user-select: none;
+  border: 1px solid;
   width: auto;
-  border: 1px solid black;
   white-space: nowrap;
-  padding: 8px 16px;
-  color: var(--color1);
   background-color: var(--color2);
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .buttons:hover > div{
@@ -322,16 +313,46 @@ Temporary Swiper style
   cursor: pointer;
 }
 
-.button-random-color{
-  background-color: var(--color3) !important;
+.rand-btn{
+  background-color: var(--color2) !important; 
+  border: 1px solid var(--color1) !important;
 }
 
-.button-bw{
-  background-color: black !important;
+.bw-btn{
+  border-right-color: black !important;
+  border-bottom-color: black !important;
+  border-top-color: white !important;
+  border-left-color: white !important;
+  background: linear-gradient(135deg, rgba(0,0,0,1) 50%, rgba(255,255,255,1) 50%);
 }
 
-.button-random-color, .button-swap, .button-bw{
-  height: 16px;
-  width: 16px;
+.rand-btn, .swap-btn, .bw-btn{
+  height: 48px;
+  aspect-ratio: 1;
   border-radius: 100%;
+  color: var(--color1);
+}
+
+.download-btn{
+  user-select: none;
+  background-color: var(--color2);
+  position: absolute;
+  z-index: 10000;
+  bottom: 32px;
+  right: 32px;
+  border: 1px solid black;
+  border-radius: 100px;
+  height: 48px;
+  padding: 0 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.download-btn:after{
+  content: "Download";
+}
+
+.download-btn:hover{
+  cursor: pointer;
 }
