--- a/css/style.css
+++ b/css/style.css
@@ -149,18 +149,25 @@ Font Grid
 .font-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap:1px;
   margin-top: 5vh;
   margin-bottom: 5vh;
+  border-top: 1px solid black;
+border-left: 1px solid black;
+
 }
 
 .block {
-  box-shadow:0 0 0 1px black;
   padding: 10%;
   aspect-ratio: 4/3;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 3;
+  border-bottom: 1px solid black;
+  border-right: 1px solid black;
+}
+
+.block:hover {
+  background-color: var(--color3);
 }
 
 .font-name {
@@ -175,8 +182,9 @@ Font Grid
 .font-text {
   grid-row: 2;
   grid-column: 1 / span 2;
-    text-align: center;
+  text-align: center;
   place-self: center;
+  font-size: calc(20px + (45 - 20) * ((100vw - 576px) / (2560 - 576)));
 }
 
 
@@ -243,7 +251,7 @@ Prev and Next buttons
 
 .swiper-button-prev{
   left: 0 !important;
-  cursor: w-resize !important;  
+  cursor: w-resize !important;
   justify-content: start !important;
   align-items: center !important;
 }
@@ -251,7 +259,7 @@ Prev and Next buttons
 .swiper-button-next{
   justify-content: end;
   right: 0 !important;
-  cursor: e-resize !important;  
+  cursor: e-resize !important;
   justify-content: end !important;
   align-items: center !important;
 }
@@ -329,7 +337,7 @@ BW, random, switch, download buttons
 }
 
 .rand-btn{
-  background-color: var(--color2) !important; 
+  background-color: var(--color2) !important;
   border: 1px solid var(--color1) !important;
 }
 
