--- a/css/style.css
+++ b/css/style.css
@@ -344,10 +344,13 @@ Swiper style
 
 .glifi {
   font-size: 96px;
+  line-height: calc(96px * 1.2);
   text-align: center;
   display: grid;
   align-items: center;
   justify-content: center;
+  height: 100%;
+  word-break: break-all;
 }
 
 .swiper-button-next:after, .swiper-button-prev:after{
